Im fixing sticky header issue with covering content below it

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,11 @@
+
+
 body {
     font-family: 'Libre franklin', sans-serif;
     font-size: 62.5%;
+    height: 100%;       /* To  prevent bouncing site when scroll is on the bottom */
+    overflow: hidden;   /*  To  prevent bouncing site when scroll is on the bottom */
+    
 }
 
 .clearfix {
@@ -8,12 +13,18 @@ body {
 }
 
 
+
 /*//////////////////////////////header style/////////////////////////////*/
 
-header {
-    margin-top: 50px;
+.siteHeader {
+    margin-top: 10px;
+    padding: 20px 0; /*Added*/
+    box-sizing: border-box;
 }
-
+.siteHeader.stickyHeader {
+    margin-top: 0;
+    
+}
 h1 {
     font-weight: 500;
     font-style: italic;
@@ -49,6 +60,7 @@ h1 span {
         -moz-box-shadow: 0px 8px 5px -5px rgba(0, 0, 0, 0.55);
         box-shadow: 0px 8px 5px -5px rgba(0, 0, 0, 0.55);
     }
+    
 
 /*///////////////////////////////////end/////////////////////////////////*/
 
@@ -192,6 +204,11 @@ a:active {
     font-style: italic;
 }
 
+#aboutMe.aboutMeMarginTop {  /*When header sticks, im adding proper margin-top to #aboutMe section, below it to prevent covering part of #aboutMe section */
+    margin: 160px 0 0 0;
+
+}
+
 
 /*//////////////////////////////social-media/////////////////////////////*/
 
@@ -305,6 +322,8 @@ a:active {
 /*////////////////////////////////////////footer////////////////////////////////*/
 
 footer {
+    width: 100%;
+    min-height: 200px;
     text-align: center;
     padding: 70px 0 50px 0;
     font-size: 0.7rem;
@@ -390,7 +409,7 @@ footer {
     }
 }
 @media(min-width: 768px) {
-    header {
+    .siteHeader {
         margin-top: 70px;
     }
     .s-media-row1{
@@ -415,6 +434,7 @@ footer {
     }
     footer {
         padding-top: 100px;
+        padding-bottom: 100px;
     }
     #topBtn {
         width: 65px;
@@ -449,11 +469,7 @@ footer {
         margin-top: 0px;
     }
     
-    /*    Im adding position: inherit; to class stickyHeader that it would not be sticky when hamburger btn is switch(it is switch over 992px) to inline menu(Then nav should be sticky, not header).*/
-    .stickyHeader {
-        position: inherit;    
-        
-    }
+    
     .stickyNav {
         position: fixed;    
         width: 100%;
